--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,13 +9,15 @@
 }
 .slider {
     position: relative;
-    width: 200px;
+    width: 250px;
 }
 
 .slider__track,
 .slider__range,
 .slider__left-value,
-.slider__right-value {
+.slider__right-value,
+.slider__bottom_left-value,
+.slider__bottom_right-value {
     position: absolute;
 }
 
@@ -26,29 +28,39 @@
 }
 
 .slider__track {
-    background-color: #ced4da;
+    background-color: #292929;
     width: 100%;
     z-index: 1;
 }
 
 .slider__range {
-    background-color: #9fe5e1;
+    background-color: #292929;
     z-index: 2;
 }
 
 .slider__left-value,
 .slider__right-value {
-    color: #dee2e6;
+    color: #161717;
+    border-radius: 5px;
     font-size: 12px;
-    margin-top: 20px;
+    padding: 6px 10px;
+    background: #FFFFFF;
+    bottom: 16px;
 }
 
-.slider__left-value {
-    left: 6px;
+.slider__bottom_left-value,
+.slider__bottom_right-value {
+    color: #828A93;
+    font-size: 10px;
+    top: 16px;
 }
 
-.slider__right-value {
-    right: -4px;
+.slider__left-value, .slider__bottom_left-value {
+    left: 0;
+}
+
+.slider__right-value, .slider__bottom_right-value {
+    right: 0;
 }
 
 /* Removing the default appearance */
@@ -80,24 +92,34 @@
 
 /* For Chrome browsers */
 .thumb::-webkit-slider-thumb {
-    background-color: #f1f5f7;
+    background-color: #292929;
     border: none;
     border-radius: 50%;
-    box-shadow: 0 0 1px 1px #ced4da;
     cursor: pointer;
-    height: 18px;
-    width: 18px;
+    height: 24px;
+    width: 24px;
     margin-top: 4px;
     pointer-events: all;
     position: relative;
 }
 
+.thumb::-webkit-slider-thumb::before {
+    content: "d";
+    display: block;
+    height: 18px;
+    width: 18px;
+    border-radius: 50%;
+    background-color: #292929;
+    position: absolute;
+    top: 3px;
+    left: 3px;
+}
+
 /* For Firefox browsers */
 .thumb::-moz-range-thumb {
-    background-color: #f1f5f7;
+    background-color: #292929;
     border: none;
     border-radius: 50%;
-    box-shadow: 0 0 1px 1px #ced4da;
     cursor: pointer;
     height: 18px;
     width: 18px;
